# WOPRserver

./: .gitignore  README.md  pyproject.toml  ruff.toml
benchmarking/: README.md  cli.py  generator.py
benchmarking/check/: grpcstream.py  reststream.py  reststreamlangchain.py  reststreamlangchainsse.py
benchmarking/common/: dataplane_pb2.py  dataplane_pb2_grpc.py  grpc.js  grpc_client.py  helpers.js  helpers.py  one_off_stream_grpc.py  prom_utils.py  rest.js  rest_client.py
benchmarking/data/: llm-requests.json
benchmarking/data/llm/: grpc-requests-many.json  grpc-requests.json  grpc-requests.pb  rest-requests-many.json  rest-requests.json
benchmarking/data/summodel/: grpc-requests-many.json  grpc-requests.json  grpc-requests.pb  rest-requests-many.json  rest-requests.json
benchmarking/scenarios/: inference-grpc.js  inference-rest.js  inference_grpc.py  inference_rest.py  mms.js  mms.py  streaming-grpc.js  streaming-rest.js  streaming_grpc.py  streaming_rest.py
benchmarking/testserver/: settings.json
benchmarking/testserver/models/langchain/: MLmodel  conda.yaml  model-settings.json  model.pkl  python_env.yaml  requirements.txt  save_fake_chat_model.py
benchmarking/testserver/models/llm/: model-settings.json  model.py
benchmarking/testserver/models/summodel/: model-settings.json  model.py
src/woprserver/: banner.py  cli.py  config.py  server.py
src/woprserver/grpc/: server.py
src/woprserver/logging/: __init__.py  adapters.py  config.py  formatting.py  handlers.py  install.py  neutralizers.py  record.py  routing.py  utils.py
src/woprserver/parallel/: README.md  __init__.py  dispatcher.py  errors.py  messages.py  model.py  pool.py  registry.py  responses.py  utils.py  worker.py
src/woprserver/replicants/: langchain.py  script.sh
src/woprserver/rest/: server.py
tests/: test_config.py  test_logging.py
tests/parallel/: conftest.py  fixtures.py  test_dispatcher.py  test_env_sanity.py  test_errors.py  test_logging.py  test_messages.py  test_model.py  test_pool.py  test_registry.py  test_server.py  test_utils.py  test_worker.py  utils.py
tests/parallel/testdata/: env_models.py  environment.yml  model-settings.json
(+1 files in other folders)
