[tool.poetry]
name = "WOPRserver"
version = "0.1.0"
description = "Drop-in replacement for MLServer's parallel pool"
readme = "README.md"
license = "MIT"
authors = ["Your Name <you@example.com>"]
keywords = ["mlserver", "parallel", "inference", "serving"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
]

# We ship a package under src/mlserver_parallel
packages = [
  { include = "woprserver", from = "src" },
]

[tool.poetry.scripts]
WOPRserver = "woprserver.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
mlserver = ">=1.2,<2.0"
langchain = "^0.3.27"
mlserver-sklearn = "^1.7.1"
mlflow = "^3.2.0"
mlserver-mlflow = "^1.7.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
  "ignore:Module already imported so cannot be rewritten:pytest.PytestAssertRewriteWarning",
]

[tool.poetry.group.test.dependencies]
tox = "4.16.0"

[tool.poetry.group.dev.dependencies]
datamodel-code-generator = "0.26.0"
grpcio-tools = ">=1.67.1"
pytest = "7.4.4"
pytest-asyncio = "0.21.1"
pytest-mock = "3.12.0"
pytest-cases = "3.8.5"
pytest-lazy-fixture = "^0.6.3"
tox = "4.16.0"
docker = "7.1.0"
aiohttp = "3.12.8"
aiohttp-retry = "2.8.3"
## Used for FastAPI Async testing
httpx = "0.27.0"
kafka-python-ng = "2.2.3"
tenacity = "8.4.1"
pyyaml = "6.0.1"
conda-pack = "0.7.1"
flake8 = "7.0.0"
flake8-black = "0.3.6"
mypy = "1.11.2"
mypy-protobuf = "3.1.0"
types-protobuf = "5.26.0.20240422"
types-orjson = "3.6.2"
types-aiofiles = "24.1.0.20250516"
types-requests = "2.32.0.20250602"
black = "24.8.0"
pip-licenses = "4.4.0"
pytest-xdist = "3.6.1"
filelock = "^3.13.1"
httpx-sse = ">=0.3.1,<0.5.0"
psutil = "^7.0.0"
prometheus-client = "^0.22.1"
grpcio = "^1.74.0"
langchain-core = "^0.3.74"
ruff = {extras = ["format"], version = "^0.12.9"}
[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
